fix withheld box alignment in Flagged submission table

--- a/gb-userscripts.css
+++ b/gb-userscripts.css
@@ -105,7 +105,7 @@
 #Admin_Modlog .LabelState.IsWithheld,
 #Admin_FlaggedSubmissions .LabelState.IsWithheld {
 	position: absolute;
-	top: 12px;
+	top: 9px;
 	right: 0;
 }
 
